bk_ida/gccida/c3/ix86_setup_incoming_varargs
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/i386.c:2870:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/i386.c:2875:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/i386.c:2882:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/i386.c:2891:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/i386.c:2919:18: error: expected expression
v10 = *( _OWORD *)&cum->words; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/i386.c:2919:10: error: use of undeclared identifier '_OWORD'
v10 = *( _OWORD *)&cum->words; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/i386.c:2920:12: error: expected expression
*( _OWORD *)&v41.sse_words = *( _OWORD *)&cum->sse_words; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/i386.c:2920:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v41.sse_words = *( _OWORD *)&cum->sse_words; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/i386.c:2920:41: error: expected expression
*( _OWORD *)&v41.sse_words = *( _OWORD *)&cum->sse_words; 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/i386.c:2920:33: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v41.sse_words = *( _OWORD *)&cum->sse_words; 
                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/i386.c:2921:12: error: expected expression
*( _OWORD *)&v41.words = v10; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/i386.c:2921:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v41.words = v10; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/i386.c:2930:18: error: expected expression
v12 = *( _OWORD *)&cum->words; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/i386.c:2930:10: error: use of undeclared identifier '_OWORD'
v12 = *( _OWORD *)&cum->words; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/i386.c:2931:12: error: expected expression
*( _OWORD *)&v41.sse_words = *( _OWORD *)&cum->sse_words; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/i386.c:2931:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v41.sse_words = *( _OWORD *)&cum->sse_words; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/i386.c:2931:41: error: expected expression
*( _OWORD *)&v41.sse_words = *( _OWORD *)&cum->sse_words; 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/i386.c:2931:33: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v41.sse_words = *( _OWORD *)&cum->sse_words; 
                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/i386.c:2932:12: error: expected expression
*( _OWORD *)&v41.words = v12; 
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_setup_incoming_varargs/src/obj/i386.o] Error 1
